--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,19 @@
-image: ruby:2.4.2
 stages:
   - build
   - test
   - deploy
 
 variables:
-  DATABASE_URL: 'mongodb://mongo/user_posts'
+ DATABASE_URL: 'mongodb://mongo/user_posts'
 
 before_script:
-  - cd reddit
-  - bundle install
+- cd reddit
+- bundle install
+
+build_job:
+  stage: build
+  script:
+    - echo 'Building'
 
 test_unit_job:
   stage: test
@@ -17,3 +21,13 @@ test_unit_job:
     - mongo:latest
   script:
     - ruby simpletest.rb
+
+test_integration_job:
+  stage: test
+  script:
+    - echo 'Testing 2'
+
+deploy_job:
+  stage: deploy
+  script:
+    - echo 'Deploy'
