--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,9 @@
-- image: ruby:2.4.2
-  stages:
-    - build
-    - test
-    - deploy
+image: ruby:2.4.2
+
+stages:
+  - build
+  - test
+  - deploy
 
 variables:
   DATABASE_URL: 'mongodb://mongo/user_posts'
