--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,77 +1,80 @@
-version: '3.3'
-services:
-  post_db:
-    image: mongo:3.2
-    volumes:
-      - post_db:/data/db
-    networks:
-      - back_net
-  ui:
-    env_file: .env
-    build: ./ui
-    image: ${USERNAME}/ui:${UI_VER}
-    ports:
-      - ${PORT}:${PORT}/tcp
-    networks:
-      - front_net
+# src/docker-compose.yml
 
-  post:
-    env_file: .env
-    build: ./post-py
-    image: ${USERNAME}/post:${P_VER}
+version: "3.3"
+
+services:
+  # prometheus:
+  #   image: "docker.io/prometheus"
+  #   ports:
+  #     - '9090:9090'
+  #   volumes:
+  #     - prometheus_data:/prometheus
+  #   networks:
+  #     - back_net
+  #     - front_net
+
+  # node-exporter:
+  #   image: prom/node-exporter:v0.15.2
+  #   user: root
+  #   networks:
+  #     - back_net
+  #     - front_net
+  #   volumes:
+  #     - /proc:/host/proc:ro
+  #     - /sys:/host/sys:ro
+  #     - /:/rootfs:ro
+  #   command:
+  #     - '--path.procfs=/host/proc'
+  #     - '--path.sysfs=/host/sys'
+  #     - '--collector.filesystem.ignored-mount-points="^/(sys|proc|dev|host|etc)($$|/)"'
+
+  post_db:
+    image: "mongo:5.0"
+    volumes:
+     - ./post_db:/data/db
     networks:
-      - back_net
-      - front_net
+     - back_net
+
+  ui:
+    image: "${USER_NAME}/ui:${UI_VERSION}"
+    ports:
+     - ${UI_PORT}:9292/tcp
+    networks:
+     - front_net
+   logging:
+   driver: "fluentd"
+   options:
+   fluentd-address: localhost:24224
+   tag: service.ui
+   
+  post:
+    image: ${USER_NAME}/post
+    environment:
+      - POST_DATABASE_HOST=post_db
+      - POST_DATABASE=posts
+    depends_on:
+      - post_db
+    ports:
+      - "5000:5000"
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: service.post
+    networks:
+     - front_net
+     - back_net
 
   comment:
-    env_file: .env
-    build: ./comment
-    image: ${USERNAME}/comment:${C_VER}
+    image: "${USER_NAME}/comment:${COMMENT_VERSION}"
     networks:
-      - back_net
-      - front_net
-
-  prometheus:
-    image: ${USERNAME}/prometheus
-    networks:
-      - front_net
-    ports:
-      - '9090:9090'
-    volumes:
-      - prometheus_data:/prometheus
-    command: # Передаем доп параметры в командной строке
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--storage.tsdb.retention=1d' # Задаем время хранения метрик в 1 день
-
-  node-exporter:
-    image: prom/node-exporter:v0.15.2
-    user: root
-    networks:
-      - front_net
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /:/rootfs:ro
-    command:
-      - '--path.procfs=/host/proc'
-      - '--path.sysfs=/host/sys'
-      - '--collector.filesystem.ignored-mount-points="^/(sys|proc|dev|host|etc)($$|/)"'
+     - front_net
+     - back_net
 
 volumes:
   post_db:
   prometheus_data:
 
 networks:
-  reddit:
   front_net:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 10.0.1.0/24
-
   back_net:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 10.0.2.0/24
