--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,6 +1,7 @@
-USERNAME=virtualb0xloame
-PORT=9292
-UI_VER=latest
-P_VER=latest
-C_VER=latest
+USER_NAME=гusername
+
+UI_PORT=9292
+UI_VERSION=logging
+POST_VERSION=logging
+COMMENT_VERSION=logging
 COMPOSE_PROJECT_NAME=reddit
