--- a/src/ui/Dockerfile
+++ b/src/ui/Dockerfile
@@ -1,14 +1,13 @@
-FROM ruby:2.7.4-alpine
-RUN  apk upgrade \
-     && apk add  --no-cache ruby-full ruby-dev build-base
+FROM ubuntu:16.04
+RUN apt-get update \
+    && apt-get install -y ruby-full ruby-dev build-essential \
+    && gem install bundler --no-ri --no-rdoc
 
 ENV APP_HOME /app
 RUN mkdir $APP_HOME
 
 WORKDIR $APP_HOME
-
 ADD Gemfile* $APP_HOME/
-RUN gem install  bundler:1.17.2
 RUN bundle install
 ADD . $APP_HOME
 
