--- a/kubernetes/reddit/mongo-deployment.yml
+++ b/kubernetes/reddit/mongo-deployment.yml
@@ -1,5 +1,5 @@
 ---
-apiVersion: apps/v1
+apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
   name: mongo
@@ -7,7 +7,6 @@ metadata:
     app: reddit
     component: mongo
     comment-db: "true"
-    post-db: "true"
 spec:
   replicas: 1
   selector:
@@ -21,15 +20,13 @@ spec:
         app: reddit
         component: mongo
         comment-db: "true"
-        post-db: "true"
     spec:
       containers:
-      - image: mongo:3.6
+      - image: mongo:3.2
         name: mongo
         volumeMounts:
         - name: mongo-persistent-storage
           mountPath: /data/db
       volumes:
-      - name: mongo-gce-pd-storage
-        persistentVolumeClaim:
-          claimName: mongo-pvc
+      - name: mongo-persistent-storage
+        emptyDir: {}
