--- a/kubernetes/reddit/post-deployment.yml
+++ b/kubernetes/reddit/post-deployment.yml
@@ -17,3 +17,6 @@ spec:
       containers:
       - image: virtualb0xloame/post:logging
         name: post
+      env:
+        - name: POST_DATABASE_HOST
+          value: post_db
