--- a/kubernetes/reddit/post-deployment.yml
+++ b/kubernetes/reddit/post-deployment.yml
@@ -1,22 +1,28 @@
+
 ---
 apiVersion: apps/v1
 kind: Deployment
-metadata:
-  name: post-deployment
-spec:
+metadata: # Блок метаданных деплоя
+  name: post
+  labels:
+    app: reddit
+    component: post
+spec: # Блок спецификации деплоя
   replicas: 3
   selector:
     matchLabels:
-      app: post
-  template:
+      app: reddit
+      component: post
+  template: # Блок описания POD-ов
     metadata:
-      name: post
+      name: post-pod
       labels:
-        app: post
+        app: reddit
+        component: post
     spec:
       containers:
-      - image: virtualb0xloame/post:logging
+      - image: virtualb0xloame/post # Не забудьте подставить свой образ
         name: post
-      env:
+        env:
         - name: POST_DATABASE_HOST
-          value: post_db
+          value: post-db
